--- a/starter-code/pizza.css
+++ b/starter-code/pizza.css
@@ -1037,3 +1037,6 @@ footer a:hover {
         margin: 70px 0 10px 0;
     }
 }
+.ingredients>li:nth-child(4), .ingredients>li:nth-child(5){
+  display: none;
+}
